--- a/styles/style.css
+++ b/styles/style.css
@@ -292,3 +292,115 @@ body {
         left: 500px;
     }
 } */
+
+
+/* * {
+    box-sizing: border-box;
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+
+} */
+
+/* #container div{
+    border: 1px solid red;
+    /* flex-basis: 20%; */
+
+/* }  */
+/* 
+.Navigation {
+    flex-basis: 20%;
+    flex-grow: 0;
+    flex-shrink: 1;
+
+}
+.content {
+    flex-basis: 80%;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.header {
+    flex-basis: 100%;
+    flex-grow: 1;
+    background-color: #f5f5f5;
+    color: #000000;
+    padding: 20px;
+    flex-shrink: 0;
+    border-bottom: 2px solid black;
+} */
+/* .hey {
+    
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.logo {
+    flex-basis: 30%;
+    padding: 20px;
+    flex-grow: 0;
+    color: yellowgreen;
+    background-color: aliceblue;
+    flex-shrink: 1;
+    border-bottom: 2px gray solid;
+    text-align: center;
+}
+
+.nav {
+    padding: 20px;
+    flex-basis: 70%;
+    flex-grow: 1;
+    flex-shrink: 0;
+    text-align: center;
+}
+
+
+.content {
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 0;
+} */
+/* ======================================================== grid */
+
+
+/* * {
+    box-sizing: border-box;
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.item {
+    border: 2px solid red;
+    text-align: center;
+}
+
+.item1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.item6 {
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+.item4 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+.item5 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.item7 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+} */
+
